кастомная модель пользователей, рефакторинг

--- a/main/locale/ru/LC_MESSAGES/django.po
+++ b/main/locale/ru/LC_MESSAGES/django.po
@@ -163,3 +163,6 @@ msgstr "Поля отмеченные <strong>жирным</strong> обязат
 
 msgid "Captcha"
 msgstr "Код с картинки"
+
+msgid "Additional"
+msgstr "Дополнительно"
