--- a/main/locale/ru/LC_MESSAGES/django.po
+++ b/main/locale/ru/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-11-01 10:16+0000\n"
+"POT-Creation-Date: 2015-11-13 14:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,113 +20,133 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
+#: admin.py:133
+msgid "Additional"
+msgstr "Дополнительно"
+
 #: apps.py:9
 msgid "MainModule"
 msgstr "Главный модуль"
 
-#: forms.py:7
+#: forms.py:12
 msgid "Name"
 msgstr "Имя"
 
-#: forms.py:9
+#: forms.py:14
 msgid "Email"
 msgstr "Email"
 
-#: forms.py:11
+#: forms.py:16 models.py:15
 msgid "Phone"
 msgstr "Телефон"
 
-#: models.py:13 models.py:37 models.py:60 models.py:88 models.py:106
-msgid "Title"
-msgstr "Название"
-
-#: models.py:15 models.py:39 models.py:64 models.py:90
-msgid "Slug"
-msgstr "Символьный код"
-
-#: models.py:17 models.py:41 models.py:92
+#: forms.py:18 models.py:94 models.py:127 models.py:178
 msgid "Text"
 msgstr "Текст"
 
-#: models.py:19
-msgid "MetaTitle"
-msgstr "Заголовок браузера"
+#: forms.py:20 forms.py:48
+msgid "Captcha"
+msgstr "Код с картинки"
 
-#: models.py:21
-msgid "Keywords"
-msgstr "Ключевые слова"
-
-#: models.py:23
-msgid "Description"
-msgstr "Описание"
-
-#: models.py:30
-msgid "Page"
-msgstr "Страница"
-
-#: models.py:32
-msgid "Pages"
-msgstr "Страницы"
-
-#: models.py:48
-msgid "IncludeArea"
-msgstr "Включаемая область"
-
-#: models.py:50
-msgid "IncludeAreas"
-msgstr "Включаемые области"
-
-#: models.py:56
-msgid "Self window"
-msgstr "Текущее окно"
-
-#: models.py:57
-msgid "Blank window"
-msgstr "Новое окно"
-
-#: models.py:62
-msgid "Link"
-msgstr "Ссылка"
-
-#: models.py:66
-msgid "Target"
-msgstr "Назначение"
-
-#: models.py:68
-msgid "Cls"
-msgstr "Класс"
-
-#: models.py:70 models.py:112
-msgid "Sort"
-msgstr "Сортировка"
-
-#: models.py:81 models.py:83
-msgid "Menu"
-msgstr "Меню"
-
-#: models.py:99 models.py:110
-msgid "PhotoAlbum"
-msgstr "Фотоальбом"
-
-#: models.py:101
-msgid "PhotoAlbums"
-msgstr "Фотоальбомы"
-
-#: models.py:108
+#: models.py:17 models.py:194
 msgid "Image"
 msgstr "Изображение"
 
-#: models.py:119
+#: models.py:24 models.py:41
+msgid "Active"
+msgstr "Активность"
+
+#: models.py:26 models.py:43
+msgid "Author"
+msgstr "Автор"
+
+#: models.py:39
+msgid "Parent"
+msgstr "Родитель"
+
+#: models.py:90 models.py:123 models.py:146 models.py:174 models.py:192
+msgid "Title"
+msgstr "Название"
+
+#: models.py:92 models.py:125 models.py:150 models.py:176
+msgid "Slug"
+msgstr "Символьный код"
+
+#: models.py:96 models.py:156 models.py:198
+msgid "Sort"
+msgstr "Сортировка"
+
+#: models.py:98
+msgid "MetaTitle"
+msgstr "Заголовок браузера"
+
+#: models.py:100
+msgid "Keywords"
+msgstr "Ключевые слова"
+
+#: models.py:102
+msgid "Description"
+msgstr "Описание"
+
+#: models.py:116
+msgid "Page"
+msgstr "Страница"
+
+#: models.py:118
+msgid "Pages"
+msgstr "Страницы"
+
+#: models.py:134
+msgid "IncludeArea"
+msgstr "Включаемая область"
+
+#: models.py:136
+msgid "IncludeAreas"
+msgstr "Включаемые области"
+
+#: models.py:142
+msgid "Self window"
+msgstr "Текущее окно"
+
+#: models.py:143
+msgid "Blank window"
+msgstr "Новое окно"
+
+#: models.py:148
+msgid "Link"
+msgstr "Ссылка"
+
+#: models.py:152
+msgid "Target"
+msgstr "Назначение"
+
+#: models.py:154
+msgid "Cls"
+msgstr "Класс"
+
+#: models.py:167 models.py:169
+msgid "Menu"
+msgstr "Меню"
+
+#: models.py:185 models.py:196
+msgid "PhotoAlbum"
+msgstr "Фотоальбом"
+
+#: models.py:187
+msgid "PhotoAlbums"
+msgstr "Фотоальбомы"
+
+#: models.py:205
 msgid "Photo"
 msgstr "Фото"
 
-#: models.py:121
+#: models.py:207
 msgid "Photos"
 msgstr "Фото"
 
-#: templates/main/pages/feedback.html:29 templates/main/tags/ajax_form.html:11
-msgid "Submit"
-msgstr "Отправить"
+#: models.py:223 models.py:225
+msgid "PageComment"
+msgstr "Комментарий к странице"
 
 #: templates/main/tags/ajax_form.html:5
 msgid "form_success"
@@ -136,7 +156,53 @@ msgstr "Форма успешно отправлена"
 msgid "form_error"
 msgstr "Ошибка отправки формы"
 
-#: views.py:29
+#: templates/main/tags/ajax_form.html:11 templates/main/tags/comments.html:24
+#: templates/main/users/appuser_update_form.html:12
+msgid "Submit"
+msgstr "Отправить"
+
+#: templates/main/tags/breadcrumbs.html:4
+msgid "Main"
+msgstr "Главная"
+
+#: templates/main/tags/comments.html:14
+msgid "Answer for"
+msgstr "Ответ для"
+
+#: templates/main/tags/comments.html:15
+msgid "cancel"
+msgstr "отменить"
+
+#: templates/main/tags/comments_list.html:9
+msgid "answer comment"
+msgstr "ответить"
+
+#: templates/main/tags/comments_list.html:10
+msgid "quote comment"
+msgstr "цитировать"
+
+#: templates/main/tags/comments_list.html:24
+msgid "Be firts who leave comment"
+msgstr "Будьте первым, кто оставит комментарий"
+
+#: templates/main/tags/user_info.html:8
+#: templates/main/users/appuser_update_form.html:4
+#: templates/main/users/appuser_update_form.html:8
+msgid "Profile"
+msgstr "Профиль"
+
+#: templates/main/tags/user_info.html:9
+msgid "Log out"
+msgstr "Выход"
+
+#: templates/main/tags/user_info.html:13
+msgid "Log in"
+msgstr "Вход"
+
+#: templates/main/tags/user_info.html:14
+msgid "Register for an account"
+msgstr "Регистрация"
+
 msgid "Feedback message"
 msgstr "Сообщение из формы обратной связи"
 
@@ -149,26 +215,17 @@ msgstr "Меню"
 msgid "Applications"
 msgstr "Приложения"
 
-msgid "Active"
-msgstr "Активность"
-
-msgid "Author"
-msgstr "Автор"
-
-msgid "Parent"
-msgstr "Родитель"
-
 msgid "Fields in <strong>bold</strong> are required."
 msgstr "Поля отмеченные <strong>жирным</strong> обязательны к заполнению"
 
-msgid "Captcha"
-msgstr "Код с картинки"
+msgid "Comment"
+msgstr "Комментарий"
 
-msgid "Additional"
-msgstr "Дополнительно"
+msgid "Leave comment"
+msgstr "Оставить комментарий"
 
-msgid "Profile"
-msgstr "Профиль"
+msgid "Comment success"
+msgstr "Комментарий успешно добавлен"
 
-msgid "Main"
-msgstr "Главная"
+msgid "Comment error"
+msgstr "Ошибка добавления комментария"
