доработки баннеров и переводов

--- a/main/locale/ru/LC_MESSAGES/django.po
+++ b/main/locale/ru/LC_MESSAGES/django.po
@@ -221,6 +221,9 @@ msgstr "Поля отмеченные <strong>жирным</strong> обязат
 msgid "Comment"
 msgstr "Комментарий"
 
+msgid "Comments"
+msgstr "Комментарии"
+
 msgid "Leave comment"
 msgstr "Оставить комментарий"
 
