--- a/midnight_main/locale/ru/LC_MESSAGES/django.po
+++ b/midnight_main/locale/ru/LC_MESSAGES/django.po
@@ -241,3 +241,9 @@ msgstr "Простая страница"
 
 msgid "Guestbook"
 msgstr "Гостевая книга"
+
+msgid "Password"
+msgstr "Пароль"
+
+msgid "Password confirm"
+msgstr "Подтверждение пароля"
