--- a/midnight_news/locale/ru/LC_MESSAGES/django.po
+++ b/midnight_news/locale/ru/LC_MESSAGES/django.po
@@ -81,3 +81,9 @@ msgstr "Все новости"
 #, python-format
 msgid "All %(title)s"
 msgstr "Все %(title)s"
+
+msgid "NewsComment"
+msgstr "Комментарий к новости"
+
+msgid "NewsComments"
+msgstr "Комментарии к новостям"
